# bevy_objects

./: Cargo.toml
assets/: simple-BodyPad.gltf
src/: main.rs
