[package]
name = "bevy_objects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8", features = ["dynamic"]}
bevy_rapier3d = { version = "0.16", features = ["debug-render"]}
bevy_asset_loader = "0.12"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }

[profile.dev]
opt-level = 1
